@@ -11,6 +11,7 @@ devscripts (2.10.28) UNRELEASED; urgency=low
     + Update the check for "echo -e" to only match -n as an extra option
       rather than all theoretically possible options, thus reducing false
       positives
+    + Further improve the heredoc detection (to allow the space in "<< 'foo'")
   * cowpoke: New script to upload a Debian source package to a cowbuilder host
     and build it, optionally also signing and uploading the result to an
     incoming queue (Closes: #479274)
